ntfy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ntfy
  name: ntfy
  namespace: ntfy
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ntfy
  template:
    metadata:
      labels:
        app: ntfy
    spec:
      containers:
        - name: ntfy 
          image: binwiederhier/ntfy:v2.12.0
          args: ["serve"]
          ports: 
            - containerPort: 80
              name: web
              protocol: TCP
          volumeMounts:
              - name: config
                mountPath: /etc/ntfy
              - name: cache
                mountPath: /var/cache/ntfy
      volumes:
        - name: config
          secret:
            secretName: server-config
        - name: cache
          persistentVolumeClaim:
            claimName: ntfy
