ntfy/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ntfy
  name: ntfy
  namespace: ntfy  
spec:
  selector:
    app: ntfy
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 80
