ntfy/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ntfy
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ntfy.mandariini.uk`)
      kind: Rule
      services:
        - name: ntfy
          namespace: ntfy
          port: 80
  tls:
    secretName: mandariini-uk-tls
